# fryhcs

./: LICENSE  README.md  pyproject.toml
src/fryhcs/: __init__.py  __main__.py  apps.py  cmdline.py  config.py  element.py  fileiter.py  page.py  signals.py  spec.py  urls.py  utils.py  views.py
src/fryhcs/css/: collector.py  generator.py  modifiers.py  preflight.css  style.py  utilities.py
src/fryhcs/js/: generator.py
src/fryhcs/management/commands/: fryhcs.py
src/fryhcs/pyx/: generator.py  grammar.py  pyx.ppeg  pyxloader.py
src/fryhcs/static/js/: fryhcs.js
tests/pyx/: app.pyx  embedded.pyx
