[project]
name = "fryhcs"
version = "0.1.0"
authors = [{name="Zenk Ju", email="juzejian@gmail.com"},]
description = "A python library to generate HTML, Javascript and CSS, based on pyx file"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "parsimonious",
    "flask",
]

[project.urls]
"Homepage" = "https://github.com/zenkj/fryhcs"
"Bug Tracker" = "https://github.com/zenkj/fryhcs/issues"

[project.scripts]
fry = "fryhcs.cmdline:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


